# salary_predictions

./: .gitignore  README.md  pipeline.py  pyproject.toml
api/: main.py  schemas.py
dashboard/: app.py
src/: cleaning.py  database.py  llm_analyst.py  train.py
